hyperland 0.53 config changes

--- a/config/.config/hypr/hyprland/rules.conf
+++ b/config/.config/hypr/hyprland/rules.conf
@@ -4,99 +4,299 @@
 # windowrulev2 = opacity 0.89 override 0.89 override, class:.*
 
 # Disable blur for xwayland context menus
-windowrulev2 = noblur,class:^()$,title:^()$
+windowrule {
+  name = windowrule-1
+  no_blur = on
+  match:class = ^()$
+  match:title = ^()$
+}
+
 # windowrulev2 = noblur, xwayland:1
 
 
 # Floating
-windowrulev2 = float, class:^(blueberry\.py)$
-windowrulev2 = float, class:^(steam)$
-windowrulev2 = float, class:^(guifetch)$   # FlafyDev/guifetch
-windowrulev2 = float, class:^(pavucontrol)$
-windowrulev2 = size 45%, class:^(pavucontrol)$
-windowrulev2 = center, class:^(pavucontrol)$
-windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = size 45%, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = center, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = float, class:^(nm-connection-editor)$
-windowrulev2 = size 45%, class:^(nm-connection-editor)$
-windowrulev2 = center, class:^(nm-connection-editor)$
-windowrulev2 = float, class:.*plasmawindowed.*
-windowrulev2 = float, class:kcm_.*
-windowrulev2 = float, class:.*bluedevilwizard
-windowrulev2 = float, title:.*Welcome
-windowrulev2 = float, title:^(illogical-impulse Settings)$
-windowrulev2 = float, class:xdg.desktop.portal.gtk
-windowrulev2 = float, class:Windscribe
+windowrule {
+  name = windowrule-2
+  float = on
+  match:class = ^(blueberry\.py)$
+}
+
+windowrule {
+  name = windowrule-3
+  float = on
+  match:class = ^(steam)$
+}
+
+windowrule {
+  name = windowrule-4
+  float = on
+  match:class = ^(guifetch)$   # FlafyDev/guifetch
+}
+
+windowrule {
+  name = windowrule-5
+  float = on
+  size = (monitor_w*0.45)
+  center = on
+  match:class = ^(pavucontrol)$
+}
+
+windowrule {
+  name = windowrule-6
+  float = on
+  size = (monitor_w*0.45)
+  center = on
+  match:class = ^(org.pulseaudio.pavucontrol)$
+}
+
+windowrule {
+  name = windowrule-7
+  float = on
+  size = (monitor_w*0.45)
+  center = on
+  match:class = ^(nm-connection-editor)$
+}
+
+windowrule {
+  name = windowrule-8
+  float = on
+  match:class = .*plasmawindowed.*
+}
+
+windowrule {
+  name = windowrule-9
+  float = on
+  match:class = kcm_.*
+}
+
+windowrule {
+  name = windowrule-10
+  float = on
+  match:class = .*bluedevilwizard
+}
+
+windowrule {
+  name = windowrule-11
+  float = on
+  match:title = .*Welcome
+}
+
+windowrule {
+  name = windowrule-12
+  float = on
+  match:title = ^(illogical-impulse Settings)$
+}
+
+windowrule {
+  name = windowrule-13
+  float = on
+  match:class = xdg.desktop.portal.gtk
+}
+
+windowrule {
+  name = windowrule-14
+  float = on
+  match:class = Windscribe
+}
+
 
 # No appearance
 # kde-material-you-colors spawns a window when changing dark/light theme. This is to make sure it doesn't interfere at all.
-windowrulev2 = float, class:^(plasma-changeicons)$
-windowrulev2 = noinitialfocus, class:^(plasma-changeicons)$
-windowrulev2 = move 999999 999999, class:^(plasma-changeicons)$
+windowrule {
+  name = windowrule-15
+  float = on
+  no_initial_focus = on
+  move = (999999) (999999)
+  match:class = ^(plasma-changeicons)$
+}
+
 
 # Tiling
-windowrulev2 = tile, class:^dev\.warp\.Warp$
+windowrule {
+  name = windowrule-16
+  tile = on
+  match:class = ^dev\.warp\.Warp$
+}
+
 
 # Picture-in-Picture
-windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
-windowrulev2 = keepaspectratio, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
-windowrulev2 = move 73% 72%, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$ 
-windowrulev2 = size 25%, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
-windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
-windowrulev2 = pin, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrule {
+  name = windowrule-17
+  float = on
+  keep_aspect_ratio = on
+  move = ((monitor_w*0.73)) ((monitor_h*0.72))
+  size = (monitor_w*0.25)
+  pin = on
+  match:title = ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+}
+
 
 # Dialog windows – float+center these windows.
-windowrulev2 = center, title:^(Open File)(.*)$
-windowrulev2 = center, title:^(Select a File)(.*)$
-windowrulev2 = center, title:^(Select file)(.*)$
-windowrulev2 = center, title:^(Choose wallpaper)(.*)$
-windowrulev2 = center, title:^(Open Folder)(.*)$
-windowrulev2 = center, title:^(Save As)(.*)$
-windowrulev2 = center, title:^(Library)(.*)$
-windowrulev2 = center, title:^(File Upload)(.*)$
-windowrulev2 = float, title:^(Open File)(.*)$
-windowrulev2 = float, title:^(Select a File)(.*)$
-windowrulev2 = float, title:^(Select file)(.*)$
-windowrulev2 = float, title:^(Choose wallpaper)(.*)$
-windowrulev2 = float, title:^(Open Folder)(.*)$
-windowrulev2 = float, title:^(Save As)(.*)$
-windowrulev2 = float, title:^(Library)(.*)$
-windowrulev2 = float, title:^(File Upload)(.*)$
+windowrule {
+  name = windowrule-18
+  center = on
+  float = on
+  match:title = ^(Open File)(.*)$
+}
+
+windowrule {
+  name = windowrule-19
+  center = on
+  float = on
+  match:title = ^(Select a File)(.*)$
+}
+
+windowrule {
+  name = windowrule-20
+  center = on
+  float = on
+  match:title = ^(Select file)(.*)$
+}
+
+windowrule {
+  name = windowrule-21
+  center = on
+  float = on
+  match:title = ^(Choose wallpaper)(.*)$
+}
+
+windowrule {
+  name = windowrule-22
+  center = on
+  float = on
+  match:title = ^(Open Folder)(.*)$
+}
+
+windowrule {
+  name = windowrule-23
+  center = on
+  float = on
+  match:title = ^(Save As)(.*)$
+}
+
+windowrule {
+  name = windowrule-24
+  center = on
+  float = on
+  match:title = ^(Library)(.*)$
+}
+
+windowrule {
+  name = windowrule-25
+  center = on
+  float = on
+  match:title = ^(File Upload)(.*)$
+}
+
 
 
 # --- Tearing ---
-windowrulev2 = immediate, title:.*\.exe
-windowrulev2 = immediate, title:.*minecraft.*
-windowrulev2 = immediate, class:^(steam_app)
+windowrule {
+  name = windowrule-26
+  immediate = on
+  match:title = .*\.exe
+}
+
+windowrule {
+  name = windowrule-27
+  immediate = on
+  match:title = .*minecraft.*
+}
+
+windowrule {
+  name = windowrule-28
+  immediate = on
+  match:class = ^(steam_app)
+}
+
 
 # No shadow for tiled windows (matches windows that are not floating).
-windowrulev2 = noshadow, floating:0
+windowrule {
+  name = windowrule-29
+  no_shadow = on
+  match:float = 0
+}
+
 
 # ######## Special workspace rules ########
 workspace = special:special, gapsout:30
 
 workspace = special:spotify, gapsout:30
-windowrulev2 = workspace special:spotify, class:spotify
+windowrule {
+  name = windowrule-30
+  workspace = special:spotify
+  match:class = spotify
+}
+
 
 workspace = special:ferdium, gapsout:30
-windowrulev2 = workspace special:ferdium, class:ferdium
+windowrule {
+  name = windowrule-31
+  workspace = special:ferdium
+  match:class = ferdium
+}
+
 
 workspace = special:calc, gapsout:30
-windowrulev2 = float, class:qalculate-gtk
-windowrulev2 = center, class:qalculate-gtk
-windowrulev2 = workspace special:calc, class:qalculate-gtk
+windowrule {
+  name = windowrule-32
+  float = on
+  center = on
+  workspace = special:calc
+  match:class = qalculate-gtk
+}
+
 
 # ######## Layer rules ########
-layerrule = xray 1, .*
+layerrule {
+  name = layerrule-1
+  xray = 1
+  match:namespace = .*
+}
+
 # layerrule = noanim, .*
-layerrule = noanim, walker
-layerrule = noanim, selection
-layerrule = noanim, overview
-layerrule = noanim, anyrun
-layerrule = noanim, indicator.*
-layerrule = noanim, osk
-layerrule = noanim, hyprpicker
+layerrule {
+  name = layerrule-2
+  no_anim = on
+  match:namespace = walker
+}
+
+layerrule {
+  name = layerrule-3
+  no_anim = on
+  match:namespace = selection
+}
+
+layerrule {
+  name = layerrule-4
+  no_anim = on
+  match:namespace = overview
+}
+
+layerrule {
+  name = layerrule-5
+  no_anim = on
+  match:namespace = anyrun
+}
+
+layerrule {
+  name = layerrule-6
+  no_anim = on
+  match:namespace = indicator.*
+}
+
+layerrule {
+  name = layerrule-7
+  no_anim = on
+  match:namespace = osk
+}
+
+layerrule {
+  name = layerrule-8
+  no_anim = on
+  match:namespace = hyprpicker
+}
+
 
 # layerrule = noanim, noanim
 # #layerrule = blur, gtk-layer-shell
@@ -115,27 +315,77 @@ layerrule = noanim, hyprpicker
 
 # Launchers need to be FAST
 #layerrule = noanim, quickshell:overview
-layerrule = animation popin 98%, quickshell:overview
-layerrule = noanim, gtk4-layer-shell
+layerrule {
+  name = layerrule-9
+  animation = popin 98%
+  dim_around = on
+  match:namespace = quickshell:overview
+}
 
-layerrule = animation slide, quickshell:bar
-layerrule = animation fade, quickshell:screenCorners
-layerrule = animation slide right, quickshell:sidebarRight
-layerrule = animation slide bottom, quickshell:osk
-layerrule = animation slide bottom, quickshell:dock
-layerrule = animation fade, quickshell:notificationPopup
+layerrule {
+  name = layerrule-10
+  no_anim = on
+  match:namespace = gtk4-layer-shell
+}
 
-layerrule = blur, quickshell:session
-layerrule = noanim, quickshell:session
-layerrule = ignorealpha 0, quickshell:session
+
+layerrule {
+  name = layerrule-11
+  animation = slide
+  match:namespace = quickshell:bar
+}
+
+layerrule {
+  name = layerrule-12
+  animation = fade
+  match:namespace = quickshell:screenCorners
+}
+
+layerrule {
+  name = layerrule-13
+  animation = slide right
+  match:namespace = quickshell:sidebarRight
+}
+
+layerrule {
+  name = layerrule-14
+  animation = slide bottom
+  match:namespace = quickshell:osk
+}
+
+layerrule {
+  name = layerrule-15
+  animation = slide bottom
+  match:namespace = quickshell:dock
+}
+
+layerrule {
+  name = layerrule-16
+  animation = fade
+  match:namespace = quickshell:notificationPopup
+}
+
+
+layerrule {
+  name = layerrule-17
+  blur = on
+  no_anim = on
+  ignore_alpha = 0
+  match:namespace = quickshell:session
+}
+
 
 #layerrule = blur, quickshell:backgroundWidgets
 #layerrule = ignorealpha 0.05, quickshell:backgroundWidgets
 #layerrule = noanim, quickshell:screenshot
 
 
-layerrule = dimaround, quickshell:overview
-layerrule = dimaround, quickshell:cheatsheet
+layerrule {
+  name = layerrule-18
+  dim_around = on
+  match:namespace = quickshell:cheatsheet
+}
+
 
 # layerrule = dimaround, quickshell:calendarMonitor
 # layerrule = dimaround, quickshell:resourceMonitor
@@ -143,6 +393,7 @@ layerrule = dimaround, quickshell:cheatsheet
 # layerrule = dimaround, quickshell:clockMonitor
 # layerrule = dimaround, quickshell:mediaControls
 #layerrule = dimaround, quickshell:sidebarRight
+
 
 
 
