--- a/config/.config/hypr/hyprlock.conf
+++ b/config/.config/hypr/hyprlock.conf
@@ -1,15 +1,15 @@
-$text_color = rgba(ffdad7FF)
-$entry_background_color = rgba(3b080911)
-$entry_border_color = rgba(a08c8a55)
-$entry_color = rgba(ffdad7FF)
+$text_color = rgba(ffd9ddFF)
+$entry_background_color = rgba(3b071411)
+$entry_border_color = rgba(9f8c8e55)
+$entry_color = rgba(ffd9ddFF)
 $font_family = Rubik Light
-$font_family_clock = Rubik
+$font_family_clock = Rubik Light
 $font_material_symbols = Material Symbols Rounded
 
 background {
     color = rgba(181818FF)
     
-    path = /home/chsoares/Pictures/Wallpapers/1313368.png
+    path = /home/chsoares/Pictures/Wallpapers/cyberdune.png
     blur_size = 10
     blur_passes = 4
     brightness = 0.6
@@ -67,7 +67,7 @@ label { # Date
 
 label { # User
     monitor =
-    text = $USER
+    text =     $USER
     color = $text_color
     outline_thickness = 2
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
